--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="css/style.css"
+            href="/html/Project-Website/style.css"
         >
     </head>
     <body>
