--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card1">
                 <img id="teamimage1" src="images/teamimage.jpg" alt="teambild">
             </div>
-            <!-- article Produkte-->
+            <!-- article Waswirtun-->
             <div class="card2">
                 <h1 id="waswirtun">WAS WIR TUN</h1> <br>
                 <p id="waswirtun1">Als Dienstleister für professionelle Software-Entwicklung liefern wir Ihnen
@@ -51,6 +51,42 @@
                     gegebenenfalls passende Standardsoftware. Wir übernehmen für Sie das Customizing und die Integration
                     der Software in Ihr Unternehmen, sowie die Schulung der Anwender.</p>
             </div>
+            <!--Article Produkte-->
+            <div class="card3">
+                <h1 id="waswirtun">Unsere Produkte</h1><br>
+                <div class="produkte">
+                    <div class="ptag">
+                        <h2>Produkt A</h2><br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
+                    </div>
+                    <div><img id="prdkt" src="/images/produkta.jpg" alt="produkta"></div>
+                </div>
+                <div class="produkte">
+                    <div class="ptag">
+                        <h2>Produkt B</h2><br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
+                    </div>
+                    <div><img id="prdkt" src="/images/produktb.jpg" alt="produktb"></div>
+                </div>
+
+                <div class="produkte">
+                    <div class="ptag">
+                        <h2>Produkt C</h2><br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
+                    </div>
+                    <div><img id="prdkt" src="/images/produktc.jpg" alt="produktc"></div>
+                </div>
+                <div class="produkte">
+                    <div class="ptag">
+                        <h2>Produkt D</h2><br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
+                    </div>
+                    <div><img id="prdkt" src="/images/produktd.jpg" alt="produktd"></div>
+                </div>
+
+
+
+            </div>
         </div>
         <div class="rightcolumn">
             <div class="card">
@@ -65,11 +101,11 @@
                     <h3>Post1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, libero.</p>
                 </div><br>
-                <div><img id="postimage"  src="/images/post2.jpg" alt="post2">
+                <div><img id="postimage" src="/images/post2.jpg" alt="post2">
                     <h3>Post2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, eaque!</p>
                 </div><br>
-                <div><img id="postimage"  src="/images/post3.jpg" alt="post3">
+                <div><img id="postimage" src="/images/post3.jpg" alt="post3">
                     <h3>Post3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
                 </div>
