--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" <title>Web</title>
-<<<<<<< HEAD
+    <meta charset="utf-8"> 
+    <title> Web</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-=======
-    <link rel="stylesheet" type="text/css" href="css/style.css">
->>>>>>> main
 </head>
 
 <body>
@@ -22,11 +19,7 @@
     <!--Menu-->
     <div class="topnav">
         <a href="#">Home</a>
-<<<<<<< HEAD
         <a href="form.html">Kontakt</a>
-=======
-        <a href="#">Kontakt</a>
->>>>>>> main
         <a href="#">Account</a>
         <a href="#" style="float:right">About</a>
     </div>
