--- a/about_us.html
+++ b/about_us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/html/p1/Project-Website/images/favicon.ico"/>
     <link
             rel="stylesheet"
             type="text/css"
@@ -11,12 +12,23 @@
     <title>About Us</title>
 </head>
 <body>
+    <!-- Header -->
+    <div class="header">
+        <div class="div_img">
+            <a href="index.html" class="logo_img"><img src="/html/p1/Project-Website/images/g1_logo.png" alt="g1 logo" width="225px"></a>
+        </div>
+        <div class="div_header">
+            <h1>Groupe Eins</h1>
+            <span>Entwicklerfirma</span>
+        </div>
+        
+    </div>
     <!------------------Menu------------------>
     <div class="topnav">
-        <a href="#">Home</a>
-        <a href="#">Kontakt</a>
-        <a href="#" >Account</a>
-        <a href="#" id="about">About us</a>
+        <a href="index.html">Home</a>
+        <a href="kontakt.html">Kontakt</a>
+        <a href="team.html" >Unsere Team</a>
+        <a href="about_us.html" id="about">About us</a>
     </div>
     <!------------------Menu------------------>
 
