--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="header">
         <div class="div_img">
-            <a href="" class="logo_img"><img src="/html/p1/Project-Website/images/g1_logo.png" alt="g1 logo" width="225px"></a>
+            <a href="index.html" class="logo_img"><img src="/html/p1/Project-Website/images/g1_logo.png" alt="g1 logo" width="225px"></a>
         </div>
         <div class="div_header">
             <h1>Groupe Eins</h1>
