--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" <title>Web</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <!---------------------Header------------------->
     <div class="header">
-        <div>
-            <h1>My Website</h1>
-            <p>Resize the browser window to see the effect.</p>
-            <img src="logo_200x200.png" alt="cover" width="125px">
+        <div class="div_img">
+            <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="225px"></a>
         </div>
+
     </div>
     <!--Menu-->
     <div class="topnav">
-        <a href="#">Home</a>
-        <a href="#">Kontakt</a>
-        <a href="#">Account</a>
-        <a href="#" style="float:right">About</a>
+        <a href="index.html">Home</a>
+        <a href="form.html">Kontakt</a>
+        <a href="project.html">Unsere Team</a>
+        <a href="about_us.html" id="about">About us</a>
     </div>
     <!---------------------body--------------------------->
     <div class="row">
@@ -53,7 +53,7 @@
             </div>
             <!--Article Produkte-->
             <div class="card3">
-                <h1 id="waswirtun">Unsere Produkte</h1><br>
+                <h1 id="waswirtun" style="font-size: 40px;">Unsere Produkte</h1><br>
                 <div class="produkte">
                     <div class="ptag">
                         <h2>Produkt A</h2><br>
@@ -117,9 +117,23 @@
         </div>
     </div>
     <!--Footer-->
-    <div class="footer">
-        <h2>Footer</h2>
-    </div>
+    <footer>
+        <div class="socialmedia">
+            <ul>
+                <li> <a href="https://www.facebook.com/" target="none"><i class="fa fa-facebook"></i></a></li>
+                <li> <a href="https://www.twitter.com/" target="none"><i class="fa fa-twitter"></i></a></li>
+                <li> <a href="https://www.instagram.com/" target="none"><i class="fa fa-instagram"></i></a></li>
+
+            </ul>
+            <div id="cr">
+                <h5><span> Hergestellt bei der Gruppe Eins &#169; Copyright 2020 </span></h5>
+            </div>
+
+
+
+        </div>
+
+    </footer>
 
 </body>
 
