--- a/form.html
+++ b/form.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+   <!---------------------Header------------------->
+   <div class="header">
+    <div class="div_img">
+        <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="150px"></a>
+    </div>
+
+</div>
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="form.html">Kontakt</a>
@@ -48,8 +55,8 @@
       </select>
     </div>
     <div class="form-row">
-      <button type="reset">Reset</button>
-      <button type="submit">Submit</button>
+      <button type="reset">Abbrechen</button>
+      <button type="submit">Absenden</button>
     </div>
   </form>
 
