--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!---------------------Header------------------->
     <div class="header">
         <div class="div_img">
-            <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="225px"></a>
+            <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="150px"></a>
         </div>
 
     </div>
@@ -56,14 +56,14 @@
                 <h1 id="waswirtun" style="font-size: 40px;">Unsere Produkte</h1><br>
                 <div class="produkte">
                     <div class="ptag">
-                        <h2>Produkt A</h2><br>
+                        <h2>Website Entwicklung</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
                     <div><img id="prdkt" src="/images/produkta.jpg" alt="produkta"></div>
                 </div>
                 <div class="produkte">
                     <div class="ptag">
-                        <h2>Produkt B</h2><br>
+                        <h2>Software Entwicklung</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
                     <div><img id="prdkt" src="/images/produktb.jpg" alt="produktb"></div>
@@ -71,14 +71,14 @@
 
                 <div class="produkte">
                     <div class="ptag">
-                        <h2>Produkt C</h2><br>
+                        <h2>Shopping System</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
                     <div><img id="prdkt" src="/images/produktc.jpg" alt="produktc"></div>
                 </div>
                 <div class="produkte">
                     <div class="ptag">
-                        <h2>Produkt D</h2><br>
+                        <h2>Mobile App</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
                     <div><img id="prdkt" src="/images/produktd.jpg" alt="produktd"></div>
@@ -89,11 +89,6 @@
             </div>
         </div>
         <div class="rightcolumn">
-            <div class="card">
-                <h2 id="posthead">About Me</h2>
-                <div>Image</div>
-                <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-            </div>
             <div class="cardpost">
                 <h2 id="posthead">Popular Post</h2>
                 <br>
@@ -109,10 +104,14 @@
                     <h3>Post3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
                 </div>
-            </div>
-            <div class="card">
-                <h3 id="posthead">Follow Me</h3>
-                <p>Some text..</p>
+                <div><img id="postimage" src="/images/post4.jpg" alt="post4">
+                    <h3>Post4</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
+                </div>
+                <div><img id="postimage" src="/images/post5.jpg" alt="post5">
+                    <h3>Post5</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
+                </div>
             </div>
         </div>
     </div>
