--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="css/form.css">
   <title>FORM</title>
 </head>
 
@@ -12,7 +12,7 @@
    <!---------------------Header------------------->
    <div class="header">
     <div class="div_img">
-        <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="150px"></a>
+        <a href="index.html" class="logo_img"><img src="images/g1_logo.png" alt="g1 logo" width="150px"></a>
     </div>
 
 </div>
