--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!---------------------Header------------------->
     <div class="header">
         <div class="div_img">
-            <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="150px"></a>
+            <a href="index.html" class="logo_img"><img src="images/g1_logo.png" alt="g1 logo" width="150px"></a>
         </div>
 
     </div>
@@ -40,7 +40,7 @@
                     Optimieren Sie mit uns Ihre Workflows entlang der gesamten Wertschöpfungskette und legen Sie neue
                     Potentiale für Ihr Unternehmen frei. Wir beraten Sie gerne, sowohl über den gesamten IT-Bereich
                     hinweg, als auch beim Erkennen von Verbesserungsoptionen in Ihren Unternehmen. <br> <br>
-                    <img id="business" src="/images/business.jpg" alt="business">
+                    <img id="business" src="images/business.jpg" alt="business">
 
 
                     <span style="font-style: italic; font-size: larger; font-weight: bold;"> "Wir entwickeln genau die
@@ -59,14 +59,14 @@
                         <h2>Website Entwicklung</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
-                    <div><img id="prdkt" src="/images/produkta.jpg" alt="produkta"></div>
+                    <div><img id="prdkt" src="images/produkta.jpg" alt="produkta"></div>
                 </div>
                 <div class="produkte">
                     <div class="ptag">
                         <h2>Software Entwicklung</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
-                    <div><img id="prdkt" src="/images/produktb.jpg" alt="produktb"></div>
+                    <div><img id="prdkt" src="images/produktb.jpg" alt="produktb"></div>
                 </div>
 
                 <div class="produkte">
@@ -74,14 +74,14 @@
                         <h2>Shopping System</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
-                    <div><img id="prdkt" src="/images/produktc.jpg" alt="produktc"></div>
+                    <div><img id="prdkt" src="images/produktc.jpg" alt="produktc"></div>
                 </div>
                 <div class="produkte">
                     <div class="ptag">
                         <h2>Mobile App</h2><br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, voluptates?</p>
                     </div>
-                    <div><img id="prdkt" src="/images/produktd.jpg" alt="produktd"></div>
+                    <div><img id="prdkt" src="images/produktd.jpg" alt="produktd"></div>
                 </div>
 
 
@@ -96,19 +96,19 @@
                     <h3>Post1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, libero.</p>
                 </div><br>
-                <div><img id="postimage" src="/images/post2.jpg" alt="post2">
+                <div><img id="postimage" src="images/post2.jpg" alt="post2">
                     <h3>Post2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, eaque!</p>
                 </div><br>
-                <div><img id="postimage" src="/images/post3.jpg" alt="post3">
+                <div><img id="postimage" src="images/post3.jpg" alt="post3">
                     <h3>Post3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
                 </div>
-                <div><img id="postimage" src="/images/post4.jpg" alt="post4">
+                <div><img id="postimage" src="images/post4.jpg" alt="post4">
                     <h3>Post4</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
                 </div>
-                <div><img id="postimage" src="/images/post5.jpg" alt="post5">
+                <div><img id="postimage" src="images/post5.jpg" alt="post5">
                     <h3>Post5</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, iste.</p>
                 </div>
