--- a/about_us.html
+++ b/about_us.html
@@ -40,7 +40,7 @@
     <h1 style="text-align: center;">About Us</h1><br>
     <div class="about1">
         <div >
-            <img style="margin-left:310px; width: 50%; height: 500px; border-radius: 40px;" src="/images/unsereteam.jpeg" alt="">
+            <img style="margin-left:310px; width: 50%; height: 500px; border-radius: 40px;" src="images/unsereteam.jpeg" alt="">
         </div>
         <br><br>
         <div style="float: inline-end;">
