images url checked

--- a/about_us.html
+++ b/about_us.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <div class="header">
         <div class="div_img">
-            <a href="index.html" class="logo_img"><img src="/images/g1_logo.png" alt="g1 logo" width="150px"></a>
+            <a href="index.html" class="logo_img"><img src="images/g1_logo.png" alt="g1 logo" width="150px"></a>
         </div>
 
     </div>
