unsere team fixed

--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
     <div class="unserteam">
 
 
-        <h1 style="font-size: 40px; text-align: center;">Unser Team</h1>
+        <h1 style="font-size: 40px; text-align: center; font-family: cursive;">Unser Team</h1><br>
 
         <div class=" item sa">
             <img src="images\salah.jpeg" alt="salah image" width="100px" height="100px" />
