--- a/about_us.html
+++ b/about_us.html
@@ -34,8 +34,8 @@
     <h1 style="text-align: center; font-family: cursive;">About Us</h1><br>
     <div class="about1">
         <div>
-            <img style="margin-left:310px; width: 50%; height: 500px; border-radius: 40px;" src="images/unsereteam.jpeg"
-                alt="">
+            <img class="imgabout" src="images/unsereteam.jpeg"
+                alt="img">
         </div>
         <br><br>
         <div style="float: inline-end; font-family: cursive;">
