--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css\project.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/images/favicon.ico" />
     <meta charset="utf-8" />
     <meta name="autor" content="Annahita Jafari-kische" />
     <meta name="date" content="Mit ,9.Dez 2020 14.41" />
